Libre 2: Fix My Account buttons spacing issue. See #28.

--- a/libre-2/woocommerce.css
+++ b/libre-2/woocommerce.css
@@ -924,6 +924,14 @@ ul.products li.product .added_to_cart
 	box-shadow: none;
 }
 
+.woocommerce-account .woocommerce-MyAccount-content table .button
+{
+  word-wrap: normal;
+  word-break: normal;
+  display: inline-block;
+  margin: .25em;
+}
+
 .woocommerce-account .addresses .woocommerce-Address-title h3
 {
 	float: left;
